sort.basic.cocktail.AlgCocktailSort1.scala.error
Compilation error:
AlgCocktailSort1:6: error: not found: value nbchangt
    for (i <- 0 to nbchangt){
                   ^AlgCocktailSort1:12: error: not found: value nbchangt
    for (i <- nbchangt  to 0 by -1){
              ^